--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "engines": {
     "node": "8.1.4"
   },
-  "main": "scripts/index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node scripts/index.js"
+    "start": "node app.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ejs": "2.5.6",
+    "express": "4.15.2"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/gutoBoranga/guest-pet"
