--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "ejs": "2.5.6",
-    "express": "4.15.2"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.2",
+    "mongodb": "^2.2.30"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,8 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
